Fix mobile drawer horizontal overflow

--- a/src/assets/scss/components/site-footer.scss
+++ b/src/assets/scss/components/site-footer.scss
@@ -1,4 +1,5 @@
 .site-footer {
+  box-sizing: border-box;
   width: 100%;
   max-width: var(--site-width);
   margin: auto auto 0;
